2003-08-18 14:28:07 2003  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/parse.c (push_vars): Changed initialization to TRUE, as it
 	was before yesterday's patch.  Fixes SF bug #790489.

2003-08-17  Ethan Merritt <merritt@u.washington.edu>

	* src/eval.h src/eval.c src/parse.c: There is no need to have
 	push_vars a global exported from eval.*; move it to parse.c, the
 	only user.

2003-08-16  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
	
	* src/specfun.c [!GAMMA] (signgam): Replace explicit variable
 	definition by macro to map from sgngam in fall-back implementation
 	to default name.  Fixes gamma(x)==0 bug on Cygwin/MinGW32 builds.

2003-08-12  Ethan Merritt <merritt@u.washington.edu>

	* src/gplt_x11.c: Apply linewidth changes directly to pm3d mode (fixes
	bug that linewidths in pm3d were one plot late in being applied).

2003-08-05  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* demo/Makefile.am.in: Add equipo2.dat, field2xy.dat to CLEANFILES.

2003-08-05  Shigeharu TAKENO  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc: Fix misprints in gnuplot manual (#11).

2003-08-04  Ethan Merritt <merritt@u.washington.edu>

	* src/gplt_x11.c term/x11.trm docs/gnuplot.doc:  Honor explicit request
	for "bold" or "medium" font weight when parsing X11 font requests.

2003-07-31  Ethan Merritt <merritt@u.washington.edu>

	* src/gplt_x11.c:  Fix incorrect bracketing of switch statement entries
	introduced way back in Dec 2000. This fixes the "x11 clipboard" bug.

2003-07-27  Ethan Merritt <merritt@u.washington.edu>

	* docs/gnuplot.doc docs/titlepag.tex: This is a first pass at updating
	the "What is New" section to reflect changes since version 3.7. I also
	slightly re-arranged the sections on mousing, and added my name to the
	list of contributers.

2003-07-27  Ethan Merritt <merritt@u.washington.edu>

	* src/command.c src/mouse.c docs/gnuplot.doc: Report key modifiers
	active at the time of a mouse click in variables MOUSE_SHIFT,